# ADC_project

./: .gitignore  README.md
application/: CMakeLists.txt  function.cpp  function.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  processthread.cpp  processthread.h  protocol.cpp  protocol.h
application/libs/libpf/lib/: CMakeLists.txt
application/libs/libpf/lib/src/: function.cpp  function.h  protocol.h
application/libs/libpf/tests/: CMakeLists.txt  test_main.cpp
application/src/: main.cpp  mainwindow.h
application/uml/: adc_project.drawio.xml
microcontroler/adc/: adc.ioc
microcontroler/adc/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
microcontroller/workspace_1.12.0/test/: .cproject  .mxproject  test Debug.launch  test.ioc
microcontroller/workspace_1.12.0/test/Core/Src/: main.c
